--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,11 @@ body {
 .m-blue {
 	background: #DDEEFF;
 }
+.m-green sup,.m-pink sup {
+	border: 1px solid #FF6600;
+	border-radius: 3px;
+	background: #FF6600;
+	color: white;
+	/*vertical-align: super;*/
+}
+
