--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
 }
 .m-dropdown-menu {
 	display: none;
-    left: 42em;
+    left: 47em;
  	top: 7px;
     min-width: 12rem;
     padding-top: 4px;
@@ -149,11 +149,11 @@ body {
 }
 .container .panel-heading a:nth-child(2) {
 	position: absolute;
-	left: 50%;
+	left: 60%;
 }
 .container .panel-heading a:nth-child(3) {
 	position: absolute;
-	left: 44%;	
+	left: 50%;	
 }
 .table td,.table th{
    vertical-align: middle;
@@ -196,4 +196,13 @@ body {
 }
 .box iframe {
 	vertical-align: middle;
+}
+.m-background-blue {
+	background: #DDEEFF;
+	border-top: none;
+	border: 1px solid #DDEEFF;
+}
+.m-border-blue {
+	border: 1px solid #DDEEFF;
+	background: white;
 }
